--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Get weather data",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --parallel test/*/*.spec.js"
   },
   "keywords": [
     "weather"
@@ -19,5 +19,9 @@
     "moment": "^2.29.1",
     "node-emoji": "^1.10.0",
     "yargs": "^16.2.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^8.3.2"
   }
 }
